--- a/RomanNumberCalculator/Base.lproj/Main.storyboard
+++ b/RomanNumberCalculator/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6g-HH-yIl">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="155"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXVI" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="HoT-nf-vzq">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXVI" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="24" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HoT-nf-vzq">
                                                 <rect key="frame" x="16" y="0.0" width="343" height="155"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="calculated_value"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="100"/>
